# scale-agentex-python

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .stats.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_GUIDE.md  LICENSE  LINTING-CALLOUTS.md  README.md  SECURITY.md  TESTING_RESULTS.md  agentex-server  api.md  mypy.ini  noxfile.py  pyproject.toml  release-please-config.json  setup.py  typing-callouts.md
adk/: CHANGELOG.md  README.md  hatch_build.py  pyproject.toml
adk/docs/: harness.md  migration-0.16.0.md
examples/demos/character_builder/: Dockerfile  README.md  dev.ipynb  environments.yaml  manifest.yaml  pyproject.toml
examples/demos/character_builder/project/: __init__.py  acp.py  agents.py  models.py  streaming.py
examples/demos/deep_research/docs_researcher/: Dockerfile  manifest.yaml  pyproject.toml
examples/demos/deep_research/docs_researcher/project/: acp.py  activities.py  run_worker.py  summarization.py  workflow.py
examples/demos/procurement_agent/: .gitignore  Dockerfile  README.md  dev.ipynb  environments.yaml  manifest.yaml  pyproject.toml
examples/demos/procurement_agent/evals/: README.md  conftest.py  pytest.ini  report.html
examples/demos/procurement_agent/evals/fixtures/: events.py
examples/demos/procurement_agent/evals/graders/: database.py  tool_calls.py
examples/demos/procurement_agent/evals/tasks/: test_inspection_failed.py  test_inspection_passed.py  test_shipment_arrived.py  test_shipment_departed.py  test_submittal_approved.py
examples/demos/procurement_agent/project/: acp.py  run_worker.py  workflow.py
examples/demos/procurement_agent/project/activities/: __init__.py  activities.py
examples/demos/procurement_agent/project/agents/: __init__.py  extract_learnings_agent.py  procurement_agent.py  summarization_agent.py
examples/demos/procurement_agent/project/data/: __init__.py  database.py
examples/demos/procurement_agent/project/models/: __init__.py  events.py
examples/demos/procurement_agent/project/scripts/: __init__.py  happy_path.py  human_in_the_loop.py  out_of_order.py  send_test_events.py  send_test_events_lite.py
examples/demos/procurement_agent/project/utils/: __init__.py  learning_extraction.py  summarization.py
examples/tutorials/00_sync/030_langgraph/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/00_sync/030_langgraph/project/: acp.py  graph.py  tools.py
examples/tutorials/00_sync/030_langgraph/tests/: test_agent.py
examples/tutorials/00_sync/040_pydantic_ai/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/00_sync/040_pydantic_ai/project/: acp.py  agent.py  tools.py
examples/tutorials/00_sync/040_pydantic_ai/tests/: test_agent.py
examples/tutorials/10_agentic/00_base/010_multiturn/: .dockerignore  Dockerfile  README.md  dev.ipynb  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/00_base/010_multiturn/project/: acp.py
examples/tutorials/10_agentic/00_base/010_multiturn/tests/: test_agent.py
examples/tutorials/10_agentic/00_base/090_multi_agent_non_temporal/: Dockerfile  README.md  creator.yaml  critic.yaml  formatter.yaml  orchestrator.yaml  pyproject.toml  start-agents.sh
examples/tutorials/10_agentic/10_temporal/000_hello_acp/: Dockerfile  README.md  dev.ipynb  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/10_temporal/000_hello_acp/project/: acp.py  (+2 more)
examples/tutorials/10_agentic/10_temporal/011_custom_agent_chat/: Dockerfile  Makefile  README.md  dev.ipynb  example.env  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/10_temporal/020_state_machine/: Dockerfile  README.md  dev.ipynb  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/10_temporal/030_custom_activities/: Dockerfile  README.md  dev.ipynb  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/10_temporal/030_oai_deep_research/: Dockerfile  dev.ipynb  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/10_temporal/040_openai_temporal_integration/: .dockerignore  Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/10_temporal/050_agent_chat_guardrails/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_agentic/10_temporal/050_state_machines/: README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/00_base/020_streaming/: Dockerfile  README.md  dev.ipynb  manifest.yaml  pyproject.toml
examples/tutorials/10_async/00_base/100_langgraph/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/00_base/110_pydantic_ai/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/00_base/130_claude_code/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/00_base/130_harness_openai/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/00_base/140_codex/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/00_base/harness_pydantic_ai/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/10_temporal/090_claude_agents_sdk_mvp/: .dockerignore  .gitignore  Dockerfile  NEXT_STEPS.md  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/10_temporal/100_gemini_litellm/: Dockerfile  README.md  pyproject.toml
examples/tutorials/10_async/10_temporal/100_sgp_help/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/tutorials/10_async/10_temporal/110_pydantic_ai/: Dockerfile  README.md  manifest.yaml  pyproject.toml
examples/wmt/knowledge_orchestration_hub/wmt_conversationalist/: Dockerfile  README.md  dev.ipynb  env_example.txt  manifest.yaml  pyproject.toml
examples/wmt/knowledge_orchestration_hub/wmt_conversationalist/project/: acp.py  prompts.py  run_worker.py  tools.py  workflow.py
examples/wmt/knowledge_orchestration_hub/wmt_knowledge_monitor/: Dockerfile  README.md  dev.ipynb  manifest.yaml  pyproject.toml
examples/wmt/knowledge_orchestration_hub/wmt_knowledge_monitor/project/: run_worker.py  workflow.py
(+1383 files in other folders)
