[project]
# This is the Stainless-generated REST client. The hand-authored ADK
# overlay (formerly `src/agentex/lib/*`) now lives in `adk/` and ships
# as the sibling `agentex-sdk` package — see `adk/pyproject.toml`.
name = "agentex-client"
version = "0.16.0"
description = "The official Python REST client for the Agentex API"
dynamic = ["readme"]
license = "Apache-2.0"
authors = [
{ name = "Agentex", email = "roxanne.farhad@scale.com" },
]

dependencies = [
    "httpx>=0.28.1,<0.29",
    "pydantic>=2.0.0, <3",
    "typing-extensions>=4.14, <5",
    "anyio>=3.5.0, <5",
    "distro>=1.7.0, <2",
    "sniffio",
]

requires-python = ">= 3.11,<4"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Operating System :: POSIX",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License"
]

[project.urls]
Homepage = "https://github.com/scaleapi/scale-agentex-python"
Repository = "https://github.com/scaleapi/scale-agentex-python"

[project.optional-dependencies]
aiohttp = ["aiohttp", "httpx_aiohttp>=0.1.9"]
dev = [
    "ruff>=0.3.4",
]

# The `agentex` CLI entry point ships from the ADK package — see
# `adk/pyproject.toml`. The slim client has no CLI surface.

[tool.uv.workspace]
# Dev: `uv sync --all-packages` installs both members editably. Shared source
# `src/agentex/lib/` ships only from the heavy (via adk/hatch_build.py).
members = ["adk"]

[tool.uv.sources]
# Dev-only: resolve the ADK's agentex-client dep to this root package.
# Stripped from published wheels — the heavy wheel still pins the PyPI version.
agentex-client = { workspace = true }

[tool.uv]
managed = true
required-version = ">=0.9"

[dependency-groups]
# version pins are in uv.lock
dev = [
    "pyright==1.1.399",
    "mypy==1.17",
    "respx",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "time-machine",
    "dirty-equals>=0.6.0",
    "importlib-metadata>=6.7.0",
    "rich>=13.7.1",
    "nest_asyncio==1.6.0",
    "pytest-xdist>=3.6.1",
    "debugpy>=1.8.15",
    "ipywidgets>=8.1.7",
    "nbstripout>=0.8.1",
    "yaspin>=3.1.0",
]

[build-system]
requires = ["hatchling==1.26.3", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentex"]
# agentex/lib/* ships from the sibling agentex-sdk package (see adk/pyproject.toml).
# Excluding it here keeps the slim wheel disjoint from the heavy wheel so both
# can install into the same site-packages/agentex/ without file conflicts.
exclude = [
  "src/agentex/lib/**",
]

[tool.hatch.build.targets.sdist]
# Basically everything except hidden files/directories (such as .github, .devcontainers, .python-version, etc)
include = [
  "/*.toml",
  "/*.json",
  "/*.lock",
  "/*.md",
  "/mypy.ini",
  "/noxfile.py",
  "bin/*",
  "examples/*",
  "src/*",
  "tests/*",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
# replace relative links with absolute links
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/scaleapi/scale-agentex-python/tree/main/\g<2>)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -n auto"
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
  "error",
  "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[tool.pyright]
# Default to basic type checking, but override for specific directories
typeCheckingMode = "basic"
pythonVersion = "3.12"

exclude = [
    "_dev",
    ".venv",
    ".nox",
    ".git",
    "agentex-server",
    "examples/tutorials",
    # Exclude autogenerated Stainless code from type checking
    "src/agentex/resources",
    "src/agentex/types",
    # Build-time hook; imports hatchling, a build dep absent from the synced env.
    "adk/hatch_build.py",
]

reportImplicitOverride = true
reportOverlappingOverload = false

reportImportCycles = false
reportPrivateUsage = false

# Ignore common issues in generated SDK code
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false

# Enable strict type checking only for hand-written code
[[tool.pyright.executionEnvironments]]
root = "src/agentex/lib"
typeCheckingMode = "strict"
# But allow some flexibility in OpenAI module for complex type boundaries
reportArgumentType = false

[[tool.pyright.executionEnvironments]]
root = "examples"
typeCheckingMode = "strict"
# Allow type ignores in tutorials for readability
reportUnnecessaryTypeIgnoreComment = false

[[tool.pyright.executionEnvironments]]
root = "tests"
typeCheckingMode = "basic"
# Be loose on typing in tests unless testing types specifically
reportOptionalMemberAccess = false
reportArgumentType = false

[tool.mypy]
pretty = true
show_error_codes = true

# Exclude _files.py because mypy isn't smart enough to apply
# the correct type narrowing and as this is an internal module
# it's fine to just use Pyright.
#
# We also exclude our `tests` as mypy doesn't always infer
# types correctly and Pyright will still catch any type errors.
exclude = ['src/agentex/_files.py', '_dev/.*.py', 'tests/.*', 'examples/tutorials/.*']

strict_equality = true
implicit_reexport = true
check_untyped_defs = true
no_implicit_optional = true

warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

# Turn these options off as it could cause conflicts
# with the Pyright options.
warn_unused_ignores = false
warn_redundant_casts = false

disallow_any_generics = true
# disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
cache_fine_grained = true

# By default, mypy reports an error if you assign a value to the result
# of a function call that doesn't return anything. We do this in our test
# cases:
# ```
# result = ...
# assert result is None
# ```
# Changing this codegen to make mypy happy would increase complexity
# and would not be worth it.
disable_error_code = "func-returns-value,overload-cannot-match,no-untyped-def"

# https://github.com/python/mypy/issues/12162
[[tool.mypy.overrides]]
module = "black.files.*"
ignore_errors = true
ignore_missing_imports = true


[tool.ruff]
line-length = 120
output-format = "grouped"
target-version = "py38"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # check for missing future annotations
  "FA102",
  # bare except statements
  "E722",
  # unused arguments
  "ARG",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TC004",
  # import rules
  "TID251",
]
ignore = [
  # mutable defaults
  "B006",
]
unfixable = [
  # disable auto fix for print statements
  "T201",
  "T203",
]

extend-safe-fixes = ["FA102"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"functools.lru_cache".msg = "This function does not retain type information for the wrapped function's arguments; The `lru_cache` function from `_utils` should be used instead"

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
known-first-party = ["agentex", "tests"]

[tool.ruff.lint.per-file-ignores]
# Exclude autogenerated files from future annotations requirement
"src/agentex/resources/**.py" = ["FA102"]
"src/agentex/types/**.py" = ["FA102"]
"src/agentex/_*.py" = ["FA102"]
"bin/**.py" = ["T201", "T203"]
"scripts/**.py" = ["T201", "T203"]
"tests/**.py" = ["T201", "T203", "ARG001", "ARG002", "ARG005"]
"examples/**.py" = ["T201", "T203"]
"examples/**.ipynb" = ["T201", "T203"]
"examples/tutorials/**.py" = ["T201", "T203"]
"examples/tutorials/**.ipynb" = ["T201", "T203"]
"**/run_tests.py" = ["T201", "T203"]
"**/dev_tools/**.py" = ["T201", "T203"]
