[project]
# Hand-authored ADK overlay for agentex. This package contributes only
# `agentex/lib/*` to the agentex.* namespace; the REST client surface
# (agentex/{__init__.py, _*.py, types/, resources/}) ships from the slim
# sibling package `agentex-client` which is pinned as a runtime dep.
name = "agentex-sdk"
version = "0.17.0"
description = "Agent Development Kit (ADK) overlay for the Agentex API — FastACP server, Temporal workflows, LLM provider integrations, observability"
license = "Apache-2.0"
authors = [
  { name = "Agentex", email = "roxanne.farhad@scale.com" },
]
readme = "README.md"

dependencies = [
    # Co-released in lockstep; floor-only by design — a ceiling would
    # eventually exclude the co-versioned slim (release-please can't bump it).
    "agentex-client>=0.13.0",
    # CLI surface (agentex.lib.cli.*, agentex.lib.sdk.config.*)
    "typer>=0.16,<0.17",
    "questionary>=2.0.1,<3",
    "rich>=13.9.2,<14",
    "yaspin>=3.1.0",
    "pyyaml>=6.0.2,<7",
    "python-on-whales>=0.73.0,<0.74",
    "kubernetes>=25.0.0,<36.0.0",
    "jsonref>=1.1.0,<2",
    "jsonschema>=4.23.0,<5",
    "jinja2>=3.1.3,<4",
    "watchfiles>=0.24.0,<1.0",
    # ACP server (FastAPI app surface)
    "fastapi>=0.115.0",
    "starlette>=0.49.1",
    "uvicorn>=0.31.1",
    "aiohttp>=3.10.10,<4",
    # Temporal workflows
    "temporalio>=1.26.0,<2",
    "cloudpickle>=3.1.1",
    # Async streaming infra
    "redis>=5.2.0,<8",
    # LLM provider integrations
    "litellm>=1.83.7,<2",
    "openai-agents>=0.14.3,<0.15",
    "openai>=2.2,<3", # Required by openai-agents; litellm now supports openai 2.x (issue #13711 resolved: https://github.com/BerriAI/litellm/issues/13711)
    "claude-agent-sdk>=0.1.0",
    "pydantic-ai-slim>=1.0,<2",
    "langgraph-checkpoint>=2.0.0",
    "scale-gp>=0.1.0a59",
    "scale-gp-beta>=0.2.0",
    "mcp>=1.4.1",
    # Observability
    "ddtrace>=3.13.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "json_log_formatter>=1.1.1",
]

# agentex/lib/* uses `from typing import override` (3.12+) in 19 files.
# The slim agentex-client keeps 3.11 support.
requires-python = ">= 3.12,<4"
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/scaleapi/scale-agentex-python"
Repository = "https://github.com/scaleapi/scale-agentex-python"

[project.scripts]
agentex = "agentex.lib.cli.commands.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ship only agentex/lib/*, pulled in from the parent repo's `src/agentex/lib`
# tree. The rest of agentex.* (the Stainless-generated client) ships from the
# sibling agentex-client package, which this package pins as a runtime dep.
# Stainless explicitly preserves `src/agentex/lib/` across codegen (per
# CONTRIBUTING.md), so it's safe to keep the source where it is.
[tool.hatch.build.targets.wheel]
bypass-selection = true

# Builds the ../src/agentex/lib force-include map per-file (see hatch_build.py)
# so test files can be pruned — force-include ignores `exclude` (hatchling #1395).
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Sdist deferred: hatchling can't represent the wheel's ../src/agentex/lib
# force-include in an sdist include list. CI + bin/publish-pypi pass --wheel.
[tool.hatch.build.targets.sdist]
include = [
  "/pyproject.toml",
  "/README.md",
]
