[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wmt_conversationalist"
version = "0.1.0"
description = "An AgentEx agent that manages the conversational aspects of interacting with the system of agents"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
    "temporalio",
    "asyncpg>=0.29.0",
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.0",
    "boto3>=1.40.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "debugpy>=1.8.15",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 120
