[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wmt_knowledge_monitor"
version = "0.1.0"
description = "An AgentEx agent that monitors confluence and GDrive for updates"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
    "temporalio",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "debugpy>=1.8.15",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88