[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ab090-multi-agent-content-assembly"
version = "0.1.0"
description = "A multi-agent system that creates content through a collaborative workflow with creator, critic, formatter, and orchestrator agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["manifests"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
