[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at000-hello-acp"
version = "0.1.0"
description = "An AgentEx agent that shows how ACP works with Temporal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "debugpy>=1.8.15",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 