[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at011-custom-agent-chat"
version = "0.1.0"
description = "An AgentEx agent that streams chat using a custom Temporal activity"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
]
[dependency-groups]
dev = [
    "black",
    "flake8",
    "isort",
    "mypy>=1.17.1",
    "pytest",
    "yaspin>=3.1.0",
]


[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 
