[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at020-state-machine"
version = "0.1.0"
description = "An AgentEx agentthat demonstrates how to uose state machines to manage complex agentic workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "scale-gp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
    "debugpy>=1.8.15",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 