[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at030-oai-deep-research"
version = "0.1.0"
description = "An AgentEx agent that implements OpenAI's Deep Research multi-agent system using state machines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "openai>=1.88",
    "openai-agents>=0.0.19",
    "pydantic>=2.0",
    "mcp>=0.1.0",
    "jinja2",
    "python-dotenv",
    "scale-gp",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 