[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "at010-agent-chat"
version = "0.1.0"
description = "An AgentEx agentthat streams multiturn tool-enabled chat with tracing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentex-sdk",
    "debugpy>=1.8.15",
    "scale-gp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.hatch.build.targets.wheel]
packages = ["project"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88 
